src/app/app.component.scss
.container {
  display: flex;
  justify-content: space-between;
  background-color: #2A2D37;
  color: #F6F7FF;

  main {
    width: 75%;
    height: 100vh;
    overflow: auto;
  }

  aside {
    width: 25%;
    height: 100vh;
    // overflow: auto;

    .logo {
      height: 5rem;
      padding-top: 2rem;
      padding-left: 6rem;
      margin-bottom: 2rem;

      a {
        color: #fcfcfc;
      }

      img {
        width: 9rem;
        height: 3rem;
      }
    }
  }
}

